--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,11 @@
   --transition: 0.4s;
 }
 
-body {
+html {
   font-size: 10px;
+}
+
+body {
   font-family: var(--font-primary);
 }
 
@@ -21,12 +24,19 @@ h1 {
   font-size: 3rem;
 }
 
+h2 {
+  font-size: 3.6rem;
+  font-weight: 500;
+}
+
 header {
   background-color: white;
   box-shadow: 0px 3px 6px #00000029;
   position: fixed;
+  height: 70px;
   width: 100%;
   top: 0;
+  z-index: 2;
 }
 
 a {
@@ -39,27 +49,23 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  /* height: 100%; */
 }
 
 .container:first-child {
   justify-content: space-between;
 }
 
-/* .container:last-child {
-  justify-content: space-between;
-} */
-
 .paragraph {
   font-family: var(--font-secondary);
   color: var(--color-black);
   font-size: 1.6rem;
   font-weight: 500;
+  line-height: 2.2rem;
 }
 
 .header__nav {
   width: 50%;
-  height: 72px;
 }
 
 .header__nav ul {
@@ -81,7 +87,7 @@ a {
 }
 
 .nav__link {
-  padding: 28px 10px 24px;
+  padding: 30px 20px 26px;
   border-bottom: 4px transparent solid;
   transition: var(--transition);
   color: var(--color-gray);
@@ -100,8 +106,8 @@ a {
 
 .opener {
   width: 100%;
-  height: calc(100vh - 72px);
-  margin-top: 72px;
+  height: calc(100vh - 70px);
+  margin-top: 70px;
   flex-direction: column;
   background-color: var(--color-white);
 }
@@ -109,7 +115,7 @@ a {
 .opener__text {
   width: 100%;
   text-align: center;
-  height: 50%;
+  height: calc(50vh - 70px);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -151,8 +157,6 @@ a {
 }
 
 .statistic > h2 {
-  font-size: 3.6rem;
-  font-weight: 500;
   padding: 100px 0;
 }
 
@@ -218,4 +222,142 @@ a {
   font-size: 1.6rem;
   font-weight: 500;
   margin-top: 19px;
+}
+
+/* ======= BENEFITS ======= */
+
+.benefits {
+  width: 100%;
+  background-color: var(--color-light-gray);
+  padding: 105px 0;
+  flex-direction: column;
+}
+
+.benefit__single {
+  background-color: var(--color-white);
+  margin-bottom: 37px;
+  width: 1124px;
+  height: 370px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid #e8e9ed;
+  border-radius: 5px;
+}
+
+.benefit__double {
+  width: 1124px;
+  height: 370px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.benefit__single:nth-child(2) {
+  flex-direction: row-reverse;
+}
+
+.benefit__text {
+  width: 416px;
+  margin-left: 35px;
+  margin-right: 20px;
+  position: relative;
+}
+
+.benefit__text h2 {
+  color: var(--color-black);
+  padding-bottom: 30px;
+}
+
+.benefit__text p {
+  margin-bottom: 50px;
+}
+
+.benefit__text::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 328px;
+  height: 4px;
+  background-color: var(--accent-color);
+  bottom: 0;
+}
+
+.benefit__text--macbook::after {
+  --accent-color: var(--color-redish);
+}
+
+.benefit__text--iphone::after {
+  --accent-color: var(--color-primary);
+}
+
+.benefit__text--trumpet::after {
+  --accent-color: var(--color-green);
+}
+
+.benefit__image {
+  position: relative;
+}
+
+.benefit__image img {
+  z-index: 1;
+  position: relative;
+}
+
+.benefit--macbook .benefit__image img {
+  width: 386px;
+  height: auto;
+  margin-right: 118px;
+}
+.benefit--iphone .benefit__image img {
+  width: 426px;
+  height: auto;
+  margin-left: 70px;
+}
+
+.benefit--macbook .benefit__image::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 180px;
+  height: 180px;
+  right: 110px;
+  bottom: 80px;
+  transform: matrix(0.71, 0.71, -0.71, 0.71, 0, 0);
+  background-color: var(--color-redish);
+  border-radius: 41px;
+  z-index: 0;
+}
+
+.benefit--iphone .benefit__image::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 320px;
+  height: 320px;
+  left: 70px;
+  border-radius: 50%;
+  top: -12px;
+  background-color: var(--color-primary);
+  z-index: 0;
+}
+
+.benefit__single--trumpet {
+  width: 623px;
+  height: 100%;
+}
+
+.benefit__single--trumpet--image {
+  background-color: var(--color-green);
+  width: 440px;
+  height: 100%;
+  border: 1px solid #e8e9ed;
+  border-radius: 5px;
+}
+
+.benefit__single--trumpet--image img {
+  width: 296px;
+  height: auto;
+  margin: auto;
+  margin-top: 100px;
 }
