--- a/css/style.css
+++ b/css/style.css
@@ -622,3 +622,25 @@ a {
   height: 57px;
   background-color: var(--color-primary);
 }
+
+footer {
+  box-shadow: 0 -5px 40px #00000029;
+  padding: 20px 0;
+}
+
+.footer__info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.footer__copy {
+  font-size: 1.1rem;
+  line-height: 2.4rem;
+  color: var(--color-gray);
+  margin-top: 6px;
+}
+
+.footer__icons a:first-of-type {
+  margin-right: 25px;
+}
