--- a/css/main.css
+++ b/css/main.css
@@ -361,6 +361,10 @@ textarea {
   padding: 0.2em 0;
 }
 
+header .header__logo {
+  border: solid 1px red;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -612,31 +616,8 @@ h2 {
   font-weight: 500;
 }
 
-header {
-  background-color: white;
-  box-shadow: 0px 3px 6px #00000029;
-  position: fixed;
-  height: 70px;
-  width: 100%;
-  top: 0;
-  z-index: 2;
-}
-
 a {
   text-decoration: none;
-}
-
-.container {
-  width: 1352px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  /* height: 100%; */
-}
-
-.container:first-child {
-  justify-content: space-between;
 }
 
 .paragraph {
@@ -647,45 +628,53 @@ a {
   line-height: 2.2rem;
 }
 
-.header__nav {
-  width: 50%;
-}
-
-.header__nav ul {
-  display: flex;
-  justify-content: space-between;
-}
-
-.header__logo {
-  color: #08a6e4;
-  font-weight: 300;
-  font-size: 2.5rem;
-  cursor: pointer;
-}
-
-.nav__element {
+header {
+  background-color: white;
+  box-shadow: 0px 3px 6px rgba(46, 46, 46, 0.16);
+  position: fixed;
+  height: 4.375rem;
+  width: 100%;
+  top: 0;
+  z-index: 2;
   display: flex;
   align-items: center;
-  justify-content: center;
+}
+header ul {
+  visibility: hidden;
+}
+header .header__logo {
+  color: #08a6e4;
+  font-weight: 300;
+  font-size: 2rem;
+  cursor: pointer;
+  height: 100%;
+}
+@media (min-width: 768px) {
+  header ul {
+    visibility: visible;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  header .nav__element {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  header .nav__element a {
+    transition: --transition;
+    color: #a5a5a5;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 1.1rem;
+  }
+  header .nav__link:hover {
+    border-bottom: 4px #08a6e4 solid;
+    color: #222222;
+  }
 }
 
-.nav__link {
-  padding: 30px 20px 26px;
-  border-bottom: 4px transparent solid;
-  transition: --transition;
-  color: #a5a5a5;
-  font-family: "Open Sans", sans-serif;
-  font-weight: 700;
-  text-transform: uppercase;
-  font-size: 1.1rem;
-}
-
-.nav__link:hover {
-  border-bottom: 4px #08a6e4 solid;
-  color: #222222;
-}
-
-/* ====== OPENER ======= */
 .opener {
   width: 100%;
   height: calc(100vh - 70px);
@@ -731,7 +720,6 @@ a {
   width: 100%;
 }
 
-/* ======== STATISTIC CONTAINER ======== */
 .statistic {
   flex-direction: column;
   background-color: #ffffff;
@@ -811,7 +799,6 @@ a {
   margin-top: 19px;
 }
 
-/* ======= BENEFITS ======= */
 .benefits {
   width: 100%;
   background-color: #f7f7f7;
@@ -949,7 +936,6 @@ a {
   margin-top: 100px;
 }
 
-/* ====== PRICING ========*/
 .pricing {
   text-align: center;
   flex-direction: column;
@@ -1085,7 +1071,6 @@ a {
   --button-color: ($color-green);
 }
 
-/* CONTACT FORM */
 .contact {
   padding: 80px 100px 100px;
   align-items: flex-start;
@@ -1229,9 +1214,6 @@ footer {
   margin-top: 6px;
 }
 
-/* .footer__icons a:first-of-type {
-  margin-right: 25px;
-} */
 .footer__img {
   height: 24px;
   width: 24px;
