--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,657 +1,25 @@
 @import 'reset';
 @import 'variables';
 @import 'grid';
-@import 'benefits';
-@import 'footer';
+@import 'general';
 @import 'header';
 @import 'opener';
+@import 'statistics';
+@import 'benefits';
 @import 'pricing';
+@import 'contact';
+@import 'footer';
 
-  body {
-    font-family: ($font-primary);
-  }
-  
-  h1 {
-    font-size: 3rem;
-  }
-  
-  h2 {
-    font-size: 3.6rem;
-    font-weight: 500;
-  }
-  
-  header {
-    background-color: white;
-    box-shadow: 0px 3px 6px #00000029;
-    position: fixed;
-    height: 70px;
-    width: 100%;
-    top: 0;
-    z-index: 2;
-  }
-  
-  a {
-    text-decoration: none;
-  }
-  
-  .container {
-    width: 1352px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* height: 100%; */
-  }
-  
-  .container:first-child {
-    justify-content: space-between;
-  }
-  
-  .paragraph {
-    font-family: ($font-secondary);
-    color: $color-black;
-    font-size: 1.6rem;
-    font-weight: 500;
-    line-height: 2.2rem;
-  }
-  
-  .header__nav {
-    width: 50%;
-  }
-  
-  .header__nav ul {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .header__logo {
-    color: $color-primary;
-    font-weight: 300;
-    font-size: 2.5rem;
-    cursor: pointer;
-  }
-  
-  .nav__element {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .nav__link {
-    padding: 30px 20px 26px;
-    border-bottom: 4px transparent solid;
-    transition: (--transition);
-    color: ($color-gray);
-    font-family: ($font-secondary);
-    font-weight: 700;
-    text-transform: uppercase;
-    font-size: 1.1rem;
-  }
-  
-  .nav__link:hover {
-    border-bottom: 4px $color-primary solid;
-    color: ($color-black);
-  }
-  
-  /* ====== OPENER ======= */
-  
-  .opener {
-    width: 100%;
-    height: calc(100vh - 70px);
-    margin-top: 70px;
-    flex-direction: column;
-    background-color: ($color-white);
-  }
-  
-  .opener__text {
-    width: 100%;
-    text-align: center;
-    height: calc(50vh - 70px);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .opener__text h1 {
-    color: ($color-black);
-    font-size: 4.9rem;
-    font-weight: 500;
-    padding-top: 130px;
-  }
-  .opener__text p {
-    padding: 20px 0 38px;
-    margin-bottom: auto;
-  }
-  .btn__large {
-    color: ($color-white);
-    font-family: ($font-secondary);
-    font-size: 1.6rem;
-    font-weight: 700;
-    padding: 22px 157px;
-    border-radius: 40px;
-    background-color: $color-primary;
-  }
-  
-  .opener__image {
-    height: auto;
-    width: 100%;
-  }
-  
-  /* ======== STATISTIC CONTAINER ======== */
-  
-  .statistic {
-    flex-direction: column;
-    background-color: ($color-white);
-    text-align: center;
-    max-width: 800px;
-  }
-  
-  .statistic > h2 {
-    padding: 100px 0;
-  }
-  
-  .statistic__box {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-  }
-  
-  .single__stat {
-    max-width: 160px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    text-align: center;
-    padding-bottom: 121px;
-  }
-  
-  .stat__circle {
-    width: 63px;
-    height: 63px;
-    border-radius: 50px;
-    position: relative;
-  }
-  
-  .single__stat:nth-child(1) .stat__circle {
-    background-color: ($color-redish);
-  }
-  .single__stat:nth-child(2) .stat__circle {
-    background-color: $color-primary;
-  }
-  .single__stat:nth-child(3) .stat__circle {
-    background-color: ($color-green);
-  }
-  
-  .stat__image {
-    position: absolute;
-  }
-  
-  .single__stat:nth-child(1) .stat__image {
-    top: 0;
-    left: 45%;
-  }
-  .single__stat:nth-child(2) .stat__image {
-    top: 25%;
-    left: 30%;
-  }
-  .single__stat:nth-child(3) .stat__image {
-    top: 6px;
-    left: 50%;
-  }
-  
-  .stat__number {
-    font-weight: 900;
-    font-size: 2rem;
-    line-height: 2.4rem;
-    letter-spacing: 0.6rem;
-    margin-top: 12px;
-  }
-  
-  .stat__paragraph {
-    font-size: 1.6rem;
-    font-weight: 500;
-    margin-top: 19px;
-  }
-  
-  /* ======= BENEFITS ======= */
-  
-  .benefits {
-    width: 100%;
-    background-color: ($color-light-gray);
-    padding: 105px 0;
-    flex-direction: column;
-  }
-  
-  .benefit__single {
-    background-color: ($color-white);
-    margin-bottom: 37px;
-    width: 1124px;
-    height: 370px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border: 1px solid #e8e9ed;
-    border-radius: 5px;
-  }
-  
-  .benefit__double {
-    width: 1124px;
-    height: 370px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .benefit__single:nth-child(2) {
-    flex-direction: row-reverse;
-  }
-  
-  .benefit__text {
-    width: 416px;
-    margin-left: 35px;
-    margin-right: 20px;
-    position: relative;
-  }
-  
-  .benefit__text h2 {
-    color: ($color-black);
-    padding-bottom: 30px;
-  }
-  
-  .benefit__text p {
-    margin-bottom: 50px;
-  }
-  
-  .benefit__text::after {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 328px;
-    height: 4px;
-    background-color: (--accent-color);
-    bottom: 0;
-  }
-  
-  .benefit__text--macbook::after {
-    --accent-color: ($color-redish);
-  }
-  
-  .benefit__text--iphone::after {
-    --accent-color: $color-primary;
-  }
-  
-  .benefit__text--trumpet::after {
-    --accent-color: ($color-green);
-  }
-  
-  .benefit__image {
-    position: relative;
-  }
-  
-  .benefit__image img {
-    z-index: 1;
-    position: relative;
-  }
-  
-  .benefit--macbook .benefit__image img {
-    width: 386px;
-    height: auto;
-    margin-right: 118px;
-  }
-  .benefit--iphone .benefit__image img {
-    width: 426px;
-    height: auto;
-    margin-left: 70px;
-  }
-  
-  .benefit--macbook .benefit__image::before {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 180px;
-    height: 180px;
-    right: 110px;
-    bottom: 80px;
-    transform: matrix(0.71, 0.71, -0.71, 0.71, 0, 0);
-    background-color: ($color-redish);
-    border-radius: 41px;
-    z-index: 0;
-  }
-  
-  .benefit--iphone .benefit__image::before {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 320px;
-    height: 320px;
-    left: 70px;
-    border-radius: 50%;
-    top: -12px;
-    background-color: $color-primary;
-    z-index: 0;
-  }
-  
-  .benefit__single--trumpet {
-    width: 623px;
-    height: 100%;
-  }
-  
-  .benefit__single--trumpet--image {
-    background-color: ($color-green);
-    width: 440px;
-    height: 100%;
-    border: 1px solid #e8e9ed;
-    border-radius: 5px;
-  }
-  
-  .benefit__single--trumpet--image img {
-    width: 296px;
-    height: auto;
-    margin: auto;
-    margin-top: 100px;
-  }
-  
-  /* ====== PRICING ========*/
-  
-  .pricing {
-    text-align: center;
-    flex-direction: column;
-    padding-top: 100px;
-    padding-bottom: 179px;
-  }
-  
-  .pricing > h2 {
-    padding-bottom: 50px;
-  }
-  
-  .pricing__container {
-    display: flex;
-    justify-content: space-between;
-    width: 1266px;
-  }
-  
-  .pricing__single {
-    width: 405px;
-    height: 500px;
-    border: 1px solid (--color-border);
-    border-radius: 18px;
-    position: relative;
-  }
-  
-  .pricing--basic {
-    --color-border: ($color-redish);
-    transform: scale(0.92);
-  }
-  
-  .pricing--professional {
-    --color-border: $color-primary;
-    box-shadow: 5px 10px 27px #07ace629;
-  }
-  
-  .pricing--premium {
-    --color-border: ($color-green);
-    transform: scale(0.92);
-  }
-  
-  .pricing__single__text {
-    position: absolute;
-    margin-top: 30px;
-    width: 405px;
-    height: 490px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .pricing__single__text h3 {
-    font-weight: 700;
-    font-size: 2.1rem;
-    color: #13253b;
-    padding-bottom: 14px;
-  }
-  
-  .pricing__number {
-    font-family: ($font-secondary);
-    font-size: 4.6rem;
-    font-weight: 300;
-    color: $color-primary;
-    padding-bottom: 15px;
-  }
-  
-  .pricing__addition {
-    font-size: 1.2rem;
-    color: #13253b;
-    font-weight: 700;
-  }
-  
-  .pricing__list {
-    list-style: none;
-  }
-  
-  .pricing__list li {
-    margin-bottom: 25px;
-    font-family: ($font-secondary);
-    font-size: 1.4rem;
-    font-weight: 500;
-    width: 100%;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .li__check {
-    width: 11px;
-    height: 11px;
-    margin-right: 11px;
-    border: 1px solid (--check-color);
-    background: (--check-image);
-    background-position: center;
-    background-size: 90%;
-    background-repeat: no-repeat;
-    border-radius: 2px;
-  }
-  
-  .li__check--present {
-    --check-color: ($color-green);
-    --check-image: url(/img/Checkmark.svg);
-  }
-  .li__check--absent {
-    --check-color: ($color-redish);
-    --check-image: url(/img/Checkmark-false.svg);
-  }
-  
-  .btn {
-    width: 165px;
-    height: 50px;
-    border-radius: 23px;
-    background-color: (--button-color);
-    outline: none;
-    border: 0;
-    font-family: ($font-secondary);
-    font-weight: 700;
-    font-size: 1.3rem;
-    color: ($color-white);
-  }
-  
-  .btn--basic {
-    --button-color: ($color-redish);
-  }
-  .btn--professional {
-    --button-color: $color-primary;
-  }
-  .btn--premium {
-    --button-color: ($color-green);
-  }
-  
-  /* CONTACT FORM */
-  
-  .contact {
-    padding: 80px 100px 100px;
-    align-items: flex-start;
-  }
-  
-  .contact__column {
-    width: 50%;
-  }
-  
-  .contact__column h2 {
-    font-size: 4.9rem;
-    line-height: 5.9rem;
-  }
-  
-  .contact__instruction {
-    margin: 22px 0 42px;
-    font-size: 1.6rem;
-    line-height: 2.2rem;
-  }
-  
-  .contact__details {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-  }
-  
-  .details__item {
-    color: ($color-gray);
-    text-decoration: none;
-    font-weight: 500;
-    font-size: 1.6rem;
-  }
-  
-  .details__item img {
-    margin-right: 10px;
-  }
-  
-  .details__item:first-of-type {
-    margin-right: 20px;
-  }
-  
-  .form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .form__field {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .form__field:first-of-type {
-    margin-bottom: 42px;
-  }
-  
-  .form__label {
-    font-weight: bold;
-    text-transform: uppercase;
-    color: $color-primary;
-    line-height: 1.44rem;
-    letter-spacing: 3px;
-    font-size: 1.1rem;
-  }
-  
-  .form__input {
-    border: none;
-    border-bottom: 1px solid ($color-gray);
-    background-color: transparent;
-    line-height: 2.625rem;
-  }
-  
-  .form__consent {
-    margin-top: 30px;
-  }
-  
-  .form__checkbox {
-    display: block;
-    position: relative;
-    padding-left: 35px;
-    margin-bottom: 12px;
-    cursor: pointer;
-  }
-  
-  .form__checkbox input {
-    position: absolute;
-    opacity: 0;
-    height: 0;
-    width: 0;
-  }
-  
-  .checkbox {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 25px;
-    width: 25px;
-    background-color: ($color-white);
-    border: 1px solid ($color-gray);
-    border-radius: 4px;
-  }
-  
-  .form__checkbox input:checked ~ .checkbox {
-    background-image: url(/img/Checkmark.svg);
-    background-position: center;
-    background-size: 50%;
-    background-repeat: no-repeat;
-  }
-  
-  .form__checkbox .consent__text {
-    margin: 0 10px;
-    font-size: 1.2rem;
-    color: (--color-grey);
-    line-height: 17px;
-  }
-  
-  .form .btn {
-    font-size: 1.2rem;
-    padding: 20px 97px;
-    align-self: flex-end;
-    margin-top: 20px;
-    width: 226px;
-    height: 57px;
-    background-color: $color-primary;
-  }
-  
-  footer {
-    box-shadow: 0 -5px 40px #00000029;
-    padding: 20px 0;
-  }
-  
-  .footer__info {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-  }
-  
-  .footer__copy {
-    font-size: 1.1rem;
-    line-height: 2.4rem;
-    color: ($color-gray);
-    margin-top: 6px;
-  }
-  
-  /* .footer__icons a:first-of-type {
-    margin-right: 25px;
-  } */
-  
-  .footer__img {
-    height: 24px;
-    width: 24px;
-    background: url(/img/false/Twitter.svg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: contain;
-  }
-  
-  .img--facebook {
-    background: url(/img/false/Facebook.svg);
-  }
-  
-  .footer__icons {
-    display: flex;
-    width: 68px;
-    justify-content: space-between;
-  }
+
+  // .container {
+  //   width: 1352px;
+  //   margin: 0 auto;
+  //   display: flex;
+  //   justify-content: center;
+  //   align-items: center;
+  // }
+  
+  // .container:first-child {
+  //   justify-content: space-between;
+  // }  
   
