--- a/css/main.css
+++ b/css/main.css
@@ -376,11 +376,14 @@ header .header__logo {
   width: 100%;
   max-width: 1200px;
   padding: 0 1rem;
+  height: 100%;
 }
 
 .row {
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
+  height: 100%;
 }
 .row [class*=col-] {
   min-height: 1px;
@@ -636,8 +639,6 @@ header {
   width: 100%;
   top: 0;
   z-index: 2;
-  display: flex;
-  align-items: center;
 }
 header ul {
   visibility: hidden;
@@ -648,6 +649,7 @@ header .header__logo {
   font-size: 2rem;
   cursor: pointer;
   height: 100%;
+  text-align: center;
 }
 @media (min-width: 768px) {
   header ul {
@@ -962,17 +964,17 @@ header .header__logo {
 }
 
 .pricing--basic {
-  --color-border: ($color-redish);
+  border: 1px solid #fb3b64;
   transform: scale(0.92);
 }
 
 .pricing--professional {
-  --color-border: $color-primary;
+  border: 1px solid #08a6e4;
   box-shadow: 5px 10px 27px #07ace629;
 }
 
 .pricing--premium {
-  --color-border: ($color-green);
+  border: 1px solid #55dfb4;
   transform: scale(0.92);
 }
 
