--- a/scss/grid.scss
+++ b/scss/grid.scss
@@ -17,11 +17,14 @@ $breakpoint-lg: 1600px;
     width: 100%;
     max-width: 1200px;
     padding: 0 1rem;
+    height: 100%;
 }
 
 .row {
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
+    height: 100%;
     [class*="col-"]{
         min-height: 1px;
         padding: 0 1rem;
