--- a/scss/header.scss
+++ b/scss/header.scss
@@ -6,9 +6,6 @@ header {
     width: 100%;
     top: 0;
     z-index: 2;
-    display: flex;
-    align-items: center;
-
     ul {
       visibility: hidden;
     }
@@ -18,8 +15,9 @@ header {
       font-weight: 300;
       font-size: 2rem;
       cursor: pointer;
-      @extend %border-test;
       height: 100%;
+      text-align: center;
+      @extend %border-test;
     }
 
     @media (min-width:$breakpoint-sm){
