--- a/css/main.css
+++ b/css/main.css
@@ -361,6 +361,10 @@ textarea {
   padding: 0.2em 0;
 }
 
+.visibility {
+  height: 8.5rem;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -631,9 +635,47 @@ header {
   width: 100%;
   top: 0;
   z-index: 2;
+  max-width: 1200px;
+}
+header .small-header {
+  width: 90%;
+  height: 100%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+header nav {
+  position: absolute;
+  width: 100%;
+  background-color: #ffffff;
+  box-shadow: 0px 3px 6px rgba(46, 46, 46, 0.16);
+  overflow: hidden;
+  height: 0;
+  transition: 0.5s;
 }
 header ul {
-  visibility: hidden;
+  margin: auto;
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  text-align: left;
+  height: 8rem;
+}
+header ul a {
+  padding: 0.1rem 0;
+  transition: 0.4s;
+  color: #a5a5a5;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 0, 6875rem;
+  letter-spacing: 3.28px;
+  text-decoration: none;
+}
+header ul a:hover {
+  color: #222222;
 }
 header .header__logo {
   color: #08a6e4;
@@ -641,32 +683,50 @@ header .header__logo {
   font-size: 2rem;
   cursor: pointer;
 }
+header i {
+  font-size: 1.25rem;
+  color: #08a6e4;
+  cursor: pointer;
+  transition: 0.5s;
+}
+header i:hover {
+  transform: rotate(90deg);
+}
 @media (min-width: 768px) {
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  header i {
+    display: none;
+    visibility: hidden;
+  }
   header ul {
-    visibility: visible;
-    display: flex;
-    justify-content: space-around;
+    height: 100%;
+    width: 100%;
+    flex-direction: row;
     align-items: center;
+    justify-content: space-between;
+    margin: 0;
   }
-  header .nav__element {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-  }
-  header .nav__element a {
-    padding: 0.3rem 0;
+  header ul a {
     border-bottom: 0.3rem transparent solid;
-    transition: 0.4s;
-    color: #a5a5a5;
-    font-family: "Open Sans", sans-serif;
-    font-weight: 700;
-    text-transform: uppercase;
-    font-size: 1.1rem;
-    text-decoration: none;
+    padding: 1.25rem 0;
   }
-  header .nav__element a:hover {
+  header ul a:hover {
     border-bottom: 0.3rem #08a6e4 solid;
-    color: #222222;
+  }
+  header nav {
+    height: 100%;
+    position: relative;
+    box-shadow: none;
+    width: 60%;
+    margin-right: 2rem;
+  }
+  header .small-header {
+    width: 40%;
+    margin-left: 2rem;
   }
 }
 
