--- a/css/main.css
+++ b/css/main.css
@@ -361,6 +361,10 @@ textarea {
   padding: 0.2em 0;
 }
 
+.image {
+  border: solid 1px red;
+}
+
 .visibility {
   height: 8.5rem;
 }
@@ -369,14 +373,6 @@ textarea {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-}
-
-.container {
-  margin: 0 auto;
-  width: 100%;
-  max-width: 1200px;
-  padding: 0 1rem;
-  height: 100%;
 }
 
 .row {
@@ -635,7 +631,6 @@ header {
   width: 100%;
   top: 0;
   z-index: 2;
-  max-width: 1200px;
 }
 header .small-header {
   width: 90%;
@@ -732,30 +727,26 @@ header i:hover {
 
 .opener {
   width: 100%;
-  height: calc(100vh - 70px);
-  margin-top: 70px;
+  height: 100vh;
   flex-direction: column;
-  background-color: #ffffff;
+  position: relative;
 }
-
-.opener__text {
+.opener .opener__text {
   width: 100%;
   text-align: center;
-  height: calc(50vh - 70px);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-
-.opener__text h1 {
+.opener .opener__text h1 {
   color: #222222;
-  font-size: 4.9rem;
+  font-size: 2.1875rem;
   font-weight: 500;
   padding-top: 130px;
 }
-
-.opener__text p {
+.opener .opener__text p {
+  font-size: 1rem;
   padding: 20px 0 38px;
   margin-bottom: auto;
 }
@@ -763,16 +754,23 @@ header i:hover {
 .btn__large {
   color: #ffffff;
   font-family: "Open Sans", sans-serif;
-  font-size: 1.6rem;
+  font-size: 1rem;
   font-weight: 700;
   padding: 22px 157px;
   border-radius: 40px;
   background-color: #08a6e4;
 }
 
-.opener__image {
-  height: auto;
+.image {
+  background-image: url(../img/Background.png);
   width: 100%;
+  height: 45%;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: absolute;
+  bottom: 0;
+  z-index: -1;
 }
 
 .statistic {
