--- a/scss/grid.scss
+++ b/scss/grid.scss
@@ -12,13 +12,13 @@ $breakpoint-sm: 768px;
 $breakpoint-md: 1300px;
 $breakpoint-lg: 1600px;
 
-.container {
-    margin: 0 auto;
-    width: 100%;
-    max-width: 1200px;
-    padding: 0 1rem;
-    height: 100%;
-}
+// .container {
+//     margin: 0 auto;
+//     width: 100%;
+//     max-width: 1200px;
+//     padding: 0 1rem;
+//     height: 100%;
+// }
 
 .row {
     display: flex;
