--- a/scss/header.scss
+++ b/scss/header.scss
@@ -6,7 +6,7 @@ header {
     width: 100%;
     top: 0;
     z-index: 2;
-    max-width: 1200px;
+    // max-width: 1200px;
     
     .small-header {
       width: 90%;
