--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -113,7 +113,7 @@
     line-height: 17px;
   }
   
-  .form .btn {
+  .form {
     font-size: 1.2rem;
     padding: 20px 97px;
     align-self: flex-end;
