--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -10,6 +10,11 @@
   $font-secondary: "Open Sans", sans-serif;
   $transition: 0.4s;
 
+  // statistic colors
+  $col2: #fb3b64;
+  $col3: #55dfb4;
+  $col1:#08a6e4;
+
   %border-test {
     border: solid 1px red;
   }
