--- a/scss/opener.scss
+++ b/scss/opener.scss
@@ -1,7 +1,6 @@
 .opener {
     width: 100%;
     height: 100vh;
-    flex-direction: column;
     position: relative;
 
     .opener__text {
@@ -11,29 +10,32 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      padding-top: calc(4.375rem + 6.25rem);
         h1 {
           color: ($color-black);
           font-size: 2.1875rem;
           font-weight: 500;
-          padding-top: 130px;
       }
       p {
         font-size: 1rem;
+        width: 50%;
+        line-height: 1.375rem;
         padding: 20px 0 38px;
         margin-bottom: auto;
       }
     }
+    .btn__large {
+      color: ($color-white);
+      font-family: ($font-secondary);
+      font-size: 1rem;
+      text-decoration: none;
+      font-weight: 700;
+      padding: 1.375em 5.75em;
+      border-radius: 40px;
+      background-color: $color-primary;
+    }
   }
   
-  .btn__large {
-    color: ($color-white);
-    font-family: ($font-secondary);
-    font-size: 1rem;
-    font-weight: 700;
-    padding: 22px 157px;
-    border-radius: 40px;
-    background-color: $color-primary;
-  }
   
   .image {
     background-image: url(../img/Background.png);
@@ -44,12 +46,5 @@
     background-repeat: no-repeat;
     position: absolute;
     bottom: 0;
-    @extend %border-test;
     z-index: -1;
   }
-
-  // .opener__image {
-  //   width: 100%;
-  //   position: absolute;
-  //   bottom: 0;
-  // }
