--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -1,6 +1,8 @@
 .contact {
     padding: 80px 100px 100px;
     align-items: flex-start;
+    display: flex;
+    overflow: hidden;
   }
   
   .contact__column {
