--- a/css/main.css
+++ b/css/main.css
@@ -742,7 +742,7 @@ header i:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-top: calc(4.375rem + 6.25rem);
+  padding-top: calc(4.375rem + 5.25rem);
 }
 .opener .opener__text h1 {
   color: #222222;
@@ -867,142 +867,196 @@ header i:hover {
   width: 100%;
   background-color: #f7f7f7;
   padding: 105px 0;
-  flex-direction: column;
-}
-
-.benefit__single {
-  background-color: #ffffff;
-  margin-bottom: 37px;
-  width: 1124px;
-  height: 370px;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  overflow: hidden;
+}
+.benefits .benefit__single {
+  background-color: #ffffff;
+  margin-bottom: 2.375rem;
+  width: 90%;
+  margin: auto;
+  display: flex;
+  justify-content: space-around;
   align-items: center;
   border: 1px solid #e8e9ed;
+  text-align: left;
   border-radius: 5px;
+  flex-direction: column-reverse;
+  margin-bottom: 2.625rem;
 }
-
-.benefit__double {
-  width: 1124px;
-  height: 370px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.benefit__single:nth-child(2) {
-  flex-direction: row-reverse;
-}
-
-.benefit__text {
-  width: 416px;
-  margin-left: 35px;
-  margin-right: 20px;
+.benefits .benefit__single .benefit__text {
+  width: 80%;
+  margin: auto;
   position: relative;
 }
-
-.benefit__text h2 {
-  color: #222222;
-  padding-bottom: 30px;
+.benefits .benefit__single .benefit__text h2 {
+  font-size: 1.875rem;
+  margin-top: 1.75rem;
 }
-
-.benefit__text p {
-  margin-bottom: 50px;
+.benefits .benefit__single .benefit__text p {
+  font-size: 0.875rem;
+  line-height: 1.2rem;
+  font-weight: 700;
+  margin: 3.25rem 0 1.875rem;
 }
-
-.benefit__text::after {
-  content: "";
-  display: block;
-  position: absolute;
-  width: 328px;
-  height: 4px;
-  background-color: --accent-color;
-  bottom: 0;
-}
-
-.benefit__text--macbook::after {
-  --accent-color: ($color-redish);
-}
-
-.benefit__text--iphone::after {
-  --accent-color: $color-primary;
-}
-
-.benefit__text--trumpet::after {
-  --accent-color: ($color-green);
-}
-
-.benefit__image {
+.benefits .benefit__image {
   position: relative;
+  margin: auto;
 }
-
-.benefit__image img {
+.benefits .benefit__image img {
   z-index: 1;
   position: relative;
 }
-
-.benefit--macbook .benefit__image img {
-  width: 386px;
-  height: auto;
-  margin-right: 118px;
+.benefits .benefit--macbook .benefit__image img {
+  width: 12rem;
+  margin-top: 2.375rem;
 }
-
-.benefit--iphone .benefit__image img {
-  width: 426px;
-  height: auto;
-  margin-left: 70px;
-}
-
-.benefit--macbook .benefit__image::before {
+.benefits .benefit--macbook .benefit__image::before {
   content: "";
   display: block;
   position: absolute;
-  width: 180px;
-  height: 180px;
-  right: 110px;
-  bottom: 80px;
-  transform: matrix(0.71, 0.71, -0.71, 0.71, 0, 0);
+  width: 5.625rem;
+  height: 5.625rem;
+  left: 110px;
+  bottom: 40px;
   background-color: #fb3b64;
-  border-radius: 41px;
+  border-radius: 40px;
+  transform: rotate(45deg);
   z-index: 0;
 }
-
-.benefit--iphone .benefit__image::before {
+.benefits .benefit--iphone .benefit__image img {
+  width: 11rem;
+  margin-top: 1rem;
+}
+.benefits .benefit--iphone .benefit__image::before {
   content: "";
   display: block;
   position: absolute;
-  width: 320px;
-  height: 320px;
-  left: 70px;
+  width: 120px;
+  height: 120px;
+  left: 0;
   border-radius: 50%;
-  top: -12px;
+  top: 10px;
   background-color: #08a6e4;
   z-index: 0;
 }
-
-.benefit__single--trumpet {
-  width: 623px;
-  height: 100%;
-}
-
-.benefit__single--trumpet--image {
+.benefits .benefit__single--trumpet--image {
   background-color: #55dfb4;
-  width: 440px;
-  height: 100%;
+  width: 90%;
   border: 1px solid #e8e9ed;
-  border-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  margin-top: -48px;
 }
-
-.benefit__single--trumpet--image img {
+.benefits .benefit__single--trumpet--image img {
   width: 296px;
-  height: auto;
-  margin: auto;
   margin-top: 100px;
+}
+@media (min-width: 768px) {
+  .benefits .benefit--macbook .benefit__image img {
+    width: 386px;
+    height: auto;
+    margin-right: 118px;
+  }
+  .benefits .benefit__single {
+    background-color: #ffffff;
+    margin-bottom: 37px;
+    width: 1124px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid #e8e9ed;
+    border-radius: 5px;
+  }
+  .benefits .benefit__double {
+    width: 1124px;
+    height: 370px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .benefits .benefit__single:nth-child(2) {
+    flex-direction: row-reverse;
+  }
+  .benefits .benefit--iphone .benefit__image img {
+    width: 426px;
+    height: auto;
+    margin-left: 70px;
+  }
+  .benefits .benefit--macbook .benefit__image::before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 180px;
+    height: 180px;
+    right: 110px;
+    bottom: 80px;
+    transform: matrix(0.71, 0.71, -0.71, 0.71, 0, 0);
+    background-color: #fb3b64;
+    border-radius: 41px;
+    z-index: 0;
+  }
+  .benefits .benefit--iphone .benefit__image::before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 320px;
+    height: 320px;
+    left: 70px;
+    border-radius: 50%;
+    top: -12px;
+    background-color: #08a6e4;
+    z-index: 0;
+  }
+  .benefits .benefit__single--trumpet {
+    width: 623px;
+    height: 100%;
+  }
+  .benefits .benefit__single--trumpet--image {
+    background-color: #55dfb4;
+    width: 440px;
+    height: 100%;
+    border: 1px solid #e8e9ed;
+    border-radius: 5px;
+    margin-top: 50px;
+  }
+  .benefits .benefit__single--trumpet--image img {
+    width: 296px;
+    height: auto;
+    margin: auto;
+    margin-top: 100px;
+  }
+  .benefits .benefit__single:nth-child(2) {
+    flex-direction: row-reverse;
+  }
+  .benefits .benefit__text::after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 328px;
+    height: 4px;
+    background-color: red;
+    bottom: 0;
+  }
+  .benefits .benefit__text--macbook::after {
+    --accent-color: ($color-redish);
+  }
+  .benefits .benefit__text--iphone::after {
+    --accent-color: $color-primary;
+  }
+  .benefits .benefit__text--trumpet::after {
+    --accent-color: ($color-green);
+  }
 }
 
 .pricing {
   text-align: center;
   flex-direction: column;
+  display: flex;
+  overflow: hidden;
   padding-top: 100px;
   padding-bottom: 179px;
 }
@@ -1138,6 +1192,8 @@ header i:hover {
 .contact {
   padding: 80px 100px 100px;
   align-items: flex-start;
+  display: flex;
+  overflow: hidden;
 }
 
 .contact__column {
